COM-2930 - Fixed search icon alignment issue

--- a/stylesheets/modules/b2b-account/quotes.less
+++ b/stylesheets/modules/b2b-account/quotes.less
@@ -323,6 +323,16 @@
     padding-right: 2% !important;
 }
 
+#searchName {
+    width: 110px !important;
+    background: #eee url('../resources/images/search-regular.svg');
+    background-repeat: no-repeat;
+    background-size: 14px 14px;
+    background-position-x: 97%;
+    background-position-y: 6px;
+    padding-right: 20px !important;
+}
+
 #expirationdate
 {
     background-color: #eee;
